[FIX] - z-index sidebar

--- a/scss/layouts/_sidebar.scss
+++ b/scss/layouts/_sidebar.scss
@@ -19,6 +19,7 @@ nav{
     background-color: #fff;
     transition: 0.4s ease-out;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 3px 1px -2px rgba(0,0,0,0.12), 0 1px 5px 0 rgba(0,0,0,0.2);
+    z-index: 2;
 }
 input:checked ~nav{
     left:0;
